expanded revolution and disease

--- a/thesis.tex
+++ b/thesis.tex
@@ -136,7 +136,16 @@ These findings will go on to inform more specific studies about membrane protein
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
-I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore, I would like to extend my gratitude to the research group of Professor Stephen High.
+I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for their interesting and engaging discussion throughout my PhD.
+In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker, and Professor Stephen High of the University of Manchester and Dr Frank Eisenhaber, and Dr Birgit Eisenhaber, from the A*STAR in Singapore.
+I also express my gratitude towards Dr Wing Cheong Wong and Dr Max Hebditch for working with me on many fiddly problems.
+I would also like to thank The University of Manchester and the ARAP programme at the Singapore Bioinformatics Institute for funding the project.
+
+Outside of the office I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
+Being so far from my family and loved ones was certainly the most challenging part of this process.
+
+It was my uncle Howard's wisdom and philosophical outlook that swayed me to undertake a PhD.
+May he rest in peace.
 
 % \prefacesection{The Author}
 
