--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -21,30 +21,30 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 \subsection{The importance of transmembrane proteins}
 Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
-Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}.
+Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}, and 40\% of drug targets \cite{Overington2006}.
 These proteins allow biochemical pathways that traverse the various biological membranes used in life.
+Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells \cite{Shurtleff2018}, and mutations tend to cluster in \gls{tmh} regions of the genes \cite{Sanders2004}.
+This can result in a range of diseases including but not limited to cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\--Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidis caused by mutations the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Neimann\--Pick disease that contains over 200 disease causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
+Glycine to arginine mutations occur statistically more frequently in \gls{tmh}s than their globular $\alpha$\--helix counterparts \cite{Partridge2002}.
 %citation for drug targets
 
 %Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
-The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and  electrostatic equilibrium.
-Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
-This hydrophobicity and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
-Another way of describing it is that they fiercely dissociate from the water.
-The overall $\Delta G$ for a \gls{tmh} in the membrane is -12kcal${mol}^{\--1}$~\cite{Cymer2015}; the association of the helix in the membrane is typically spontaneous.
+
 %Expand this section
 
 \subsection{The transmembrane protein problem}
 % Needs references and a figure showing rate of globular proteins and membrane proteins.
 Because of the experimental hindrance, \gls{tmp} biology has been relatively slow to emerge.
 Throughout the 1990s the concept of a \gls{tmh} was simple and fairly assured: they were greasy peptides of around 30{\AA} in length, often bundled together and oriented perpendicularly to the membrane.
-By 2006, crystallography had elucidated more than 60 high-resolution structures.
+By 2007, crystallography had elucidated 368 \gls{tmp} structures from 148 unique proteins \cite{Carpenter2007}.
+Whilst this growth was exponential, at the same time there were in excess of 50,000 protein structures in the PDB.
 Although the classic \gls{tmh} structures were broadly prevalent, these structures contained a plethora of unusual \gls{tmh}s.
 \gls{tms}s are capable of partial spanning of the membrane, spanning using oblique angles, and even lying flat on the membrane surface~\cite{VonHeijne2006, Elofsson2007}; the classical model was incomplete.
 Even recently, there is a contingency in the  membrane biology field that despite progress over the last decade there is still a lack of information regarding the relationship between \gls{tmh} sequences and function, \gls{tmh} structure, intra-membrane \gls{tmp} assembly, and the behaviour of \gls{tmh}s in the lipid bilayer; the native biological environment of \gls{tmh}s~\cite{Ladokhin2015}.
 
 Furthermore, the insertion and formation of the unusually orientated \gls{tmh}s and of the more traditional \gls{tmh}s have been shown to be underpinned by complex thermodynamic equilibrium and electrostatic interactions~\cite{Cymer2015, Elisa2012, Ismail2015}.
-As well as being a biophysically convoluted system, \gls{tmh}s are biologically functional beyond anchorage in many cases.
-\gls{tms}s have been identified as regulators of protein quality control and trafficking mechanisms, shifting the idea away from \gls{tmh}s broadly exclusively functioning as anchors~\cite{Hessa2011}, and crucially this function beyond anchorage can be revealed by sensitive, careful analysis of the sequence information alone~\cite{Wong2012}.
+As well as being a biophysically convoluted system, \gls{tmh}s are biologically functional beyond anchoring in many cases.
+\gls{tms}s have been identified as regulators of protein quality control and trafficking mechanisms, shifting the idea away from \gls{tmh}s broadly exclusively functioning as anchors~\cite{Hessa2011}, and crucially this function beyond anchoring can be revealed by sensitive, careful analysis of the sequence information alone~\cite{Wong2012}.
 
 When predicting the function of any protein, one follows the dicta that function is facilitated by form, and form is determined by the sequence; the more similar the sequences, the more likely that the function is similar.
 For globular soluble proteins having the same folds induces strict biochemical restrictions on the packing of a hydrophobic protein core which requires similarity of non-polar residue patterns.
@@ -53,10 +53,16 @@ In the case of \gls{sp}s or \gls{tms}s the physical constraints are similar for 
 Worryingly, because of this oversight, it appears that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tms}s are indeed false positive results~\cite{Wong2010}.
 
 \subsection{The membrane protein revolution}
-Over the last decade, Nanodiscs have been routinely used to much more easily obtain crystal structures.
+Over the last decade, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
+Firstly, improvements in expression and purification occured thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshagi2005} at the colony level \cite{Cornvik2005}.
+
+Since folding of the \gls{tmp} often depends on the lipid environment, and finding conditions that encourage protein stability was shown to improve crystallisation \cite{Carpenter2007, Rosenbusch2001}.
+The technology behind nanodiscs was originally published in 2002 \cite{Bayburt2002}, and was shown to be a viable method for obtaining native conditions for \gls{tmp}s a couple of years later for cytochrome P450 \cite{Duan2004}.
+
+Nanodiscs have been routinely used to much more easily obtain crystal structures.
 Nanodiscs overcome some of the major challenges caused by the hydrophobic helices and a more faithful representation of the biological membranes than alternative model membranes like liposomes~\cite{Borch2009}.
 
-However, critical questions remain: How is the \gls{tmh} oriented in the membrane, how is the \gls{tmh} interacting with the membrane, how is the \gls{tmh} interacting with another \gls{tmh} in the membrane, does the \gls{tmh} have functions beyond anchorage and if so what are they?
+However, critical questions remain: How is the \gls{tmh} oriented in the membrane, how is the \gls{tmh} interacting with the membrane, how is the \gls{tmh} interacting with another \gls{tmh} in the membrane, does the \gls{tmh} have functions beyond anchoring and if so what are they?
 
 
 %Figure for Nanodisc
@@ -65,6 +71,52 @@ However, critical questions remain: How is the \gls{tmh} oriented in the membran
 %em
 
 \subsection{The role of bioinformatics in transmembrane biology}
+
+Due to the experimental difficulties of working with \gls{tmp}s, often it is only possible to experiment on the \gls{tmp}s \textit{in silico}, or at least common tasks that would involve expensive time consuming processes become trivialised, for example identifying \gls{tm} regions in a protein of known sequence.
+
+Traditionally, the role of bioinformatics has been to predict \gls{tm} regions of a protein.
+There are countless methods that can perform this.
+Many rely on statistical patterns to identify \gls{tmh}s such as the neural network approach of MEMSAT3 \cite{Jones2007} Hidden Markov models used in TMHMM \cite{Krogh2001}, HMMTOP \cite{Tusnady2001}, S--TMHMM \cite{Viklund2004}, OCTOPUS \cite{Viklund2008}, Phobius \cite{Kall2004}.
+Unsatisfied with a statistical approach, Scampi seq \cite{Bernsel2008} uses a first principals method following the Kyte \& Doolittle suggestion 26 years previously that a biophysical scale can predict \gls{tmh}s \cite{Kyte1982} and applies scoring based on the von Heijne biological scale \cite{Hessa2007}.
+
+Predicting the presence of a typical \gls{tmh} based on a protein sequence is currently a fairly trivial task and typically relies on a consensus of several prediction softwares, such as the automated TRANSMEM annotation used by UniProt \cite{TheUniProtConsortium2014}.
+Yet several challenges remain in separating \gls{sp}s from \gls{tmh}s \cite{Petersen2011}, correctly predicting the topology of a \gls{tmp}.
+There is also an issue of silent homology extension from $\alpha$\--helices.
+\gls{tmh}s share composition similarities due to membrane requirerments and restraints, not necessarily due to common ancestry, and it was found that many are often misreported as homologous among distantly related proteins in Pfam\cite{Wong2010}.
+Despite being able to identify \gls{tmh}s, our understanding of the specific biochemical role they play in the cell often requires intense study.
+As more data is becoming availble bionformatic methods that use multiple biochemical traits in conjunction with hydrophobicity are starting to be able to understand if a \gls{tmh} has a functional role beyond anchoring \cite{Wong2011, Wong2012}, and the protein trafficking signals held within some \gls{tmh}s \cite{Guna2018}.
+
+Despite the advances in availabilty of \gls{tmp} structures over the last decade, most are obtained from membrane free environments via X\--ray diffraction of crystals, single\--molecule cryo\--\gls{em} and NMR.
+The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and  electrostatic equilibrium.
+Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
+This hydrophobicity of \gls{tmh}s and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
+Another way of describing it is that they fiercely dissociate from the water.
+The overall $\Delta G$ for a \gls{tmh} in the membrane is -12kcal${mol}^{\--1}$~\cite{Cymer2015}; the association of the helix in the membrane is typically spontaneous but complex owing to interactions with other \gls{tmh}s in the membrane as well as \gls{tmp}\--lipid interactions.
+Although sometimes there are bound lipids and detergents included in the crystal lattice, or the \gls{tmp}s are integrated in a micelle or bicelle environment this is often insufficient to account for the complex lipodynamics of the membrane\--\gls{tmh} interactions \cite{Coskun2011, Stansfeld2015}.
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=1\textwidth]{Intro/3cap}
+		\captionof{figure}[A comparison of a single structure held by commonly used structural transmembrane protein databases.]{\textbf{A comparison of the raw outputs from commonly used structural transmembrane protein databases.}.
+		The example used here is a ligand free \gls{gpcr} rhodopsin (\gls{pdb} 3cap)~\cite{Park2008}.
+		A) The structure held by MemProtMD \cite{Stansfeld2015}. A cartoon of the structure coloured according to hydrophobicity. Red indicates a hydrophobic residues and cream a hydrophilic residue. Note the flexing and distortion of the membrane.
+		B) The RCSB PDB \cite{Berman2000} showing the hydrophobic patches on the surface (yellow is hydrophobic, cyan is hydrophilic) of the membrane proteins using OPM for topological orientation \cite{Lomize2012}.
+		The blue lines indicate the cytoplasmic side whilts the red indicates the extracellular side.
+		C) The cartoon structure of 3cap from OPM \cite{Lomize2012} coloured by the protein chain.
+		Again, the blue lines indicate the cytoplasmic side whilts the red indicates the extracellular side.
+		D) The PDBTM \cite{Kozma2012} record coloured by the \gls{tm} regions predicted by TMDET \cite{Tusnady2005} in yellow, intramembrane regions in green.
+		In this case, the non\--membrane components are coloured according to side 1 and side 2 rather than a topological prediction.
+		}
+
+\label{fig:3cap}
+\end{figure}
+
+There have been several approaches used to attempt to find a more biologically relevant structure contextualised in the membrane (Figure \ref{fig:3cap}).
+OPM \cite{Lomize2012} and PDBTM \cite{Kozma2012} use simplified models of the membrane's hydrophobic environment to orientate the \gls{tmp} into position.
+MemProtMD \cite{Stansfeld2015} uses explicit lipids, a phosphatidylcholine bilayer, in a flexible \gls{md} simulation  along with \gls{tmp}s accessed from the PDB \cite{Berman2000}.
+These approaches allow us to enhance our understanding of the \gls{tmp} structures in the context of the membrane environment.
+
+
 
 \section{Biological membranes}
 \subsection{Membrane lipids}
@@ -185,7 +237,7 @@ More recently still large-scale sequence analysis of \gls{tmh}s from different o
 
 Tyrosine and tryptophan residues commonly are found at the interface boundaries of the \gls{tmh} and this feature is called the ``aromatic belt''~\cite{Hessa2005, Granseth2005, Sharpe2010, Baeza-Delgado2013, Nilsson2005a}.
 Not all aromatic residues are not found in the aromatic belt; phenylalanine has no particular preference for this region~\cite{Granseth2005, Braun1999}.
-However, it still remains unclear if this is to do with anchorage or translocon recognition~\cite{Baeza-Delgado2013}.
+However, it still remains unclear if this is to do with anchoring or translocon recognition~\cite{Baeza-Delgado2013}.
 
 A study of conserved tryptophan residues during folding of integrin $\alpha$II$\beta$3 \gls{tm} complex demonstrated the anchoring effects of tryptophan (0.4 kcal/mol contribution to membrane stability) in \gls{tmh}s is greater than the other residues~\cite{Situ2018}. It was suggested that it's wide amphiphilic range (it's stabilising energetic contribution in either hydrophobic or polar sites) complements the heterogeneity and asymmetry of mammalian membrane lipids in particular.
 
@@ -243,7 +295,20 @@ In the case of proline, no suitable model existed and it tends to become buried,
 However, because it contains three methyl groups, the score considers it more hydrophobic than the experiments suggested.
 The authors stated: ``None of these last 3 adjustments, the result of personal bias and heated discussion between the authors, affects the hydropathy profiles in any significant way''\cite{Kyte1982}.
 Arginine represents the bottom of the scale, arbitrarily set at -4.5.
-An algorithm called SOAP was used to scan a window of $\pm$10 residues either side of each residue (allowing for half windows) across a protein to take the mean average of each position and plot them on a profile.
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=1\textwidth]{Intro/kyte}
+		\captionof{figure}[The hydropathic index of rabbit cytochrome b5.]{\textbf{The hydropathic index of rabbit cytochrome b5.}
+		The hydropathic index according to the Kyte \& Doolittle scale \cite{Kyte1982} is given on the vertical axis and the sequence number is on the horizontal axis.
+		Whilst there are several peaks above 0, only one is sustained for around 20 reisudes near the c\--terminal.
+		Cytochrome b5 is a \gls{ta} protein with an exceptionally polar \gls{tmh} for an anchor \cite{Brambillasca2006}, demonstrating the sensitivity of this method.
+		Figure adapted from Kyte \& Doolittle, 1982 \cite{Kyte1982}.
+		}
+\label{fig:kyte}
+\end{figure}
+
+An algorithm called SOAP was used to scan a window of $\pm$10 residues either side of each residue (allowing for half windows) across a protein to take the mean average of each position and plot them on a profile (Figure \ref{fig:kyte}).
 Sustained areas of high hydrophobicity were indicative of a \gls{tmh}~\cite{Kyte1982}.
 
 \subsubsection{Hessa's biological hydrophobicity scale}
@@ -262,10 +327,10 @@ The scales are normalised according to serine~\cite{Eisenberg1984}.
 The automatic TRANSMEM annotation currently used in UniProt is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
 
 \subsection{Sequence complexity}
-Sequence properties that can be analysed by bioinformatics, the sequence complexity and hydrophobicity, of the \gls{tmh} have been used to predict the role of the \gls{tmh} as either functional or structural, and as a discrete cluster from other SCOP annotated helices~\cite{Wong2012}.
-Those findings demonstrated that the sequence of the \gls{tmh} holds valuable information regarding biological roles, and forms the basis of our interest in the link between the polarity of a helix and functional activity beyond structural anchorage.
+Whilst identifying \gls{tmh} presence in a protein is somewhat trivial with modern tools, the role it plays within the membrane is hard to determine. Sequence properties that can be analysed by bioinformatics, the sequence information complexity and hydrophobicity, of the \gls{tmh} have been used to predict the role of the \gls{tmh} as either functional or structural, and as a discrete cluster from other SCOP annotated helices~\cite{Wong2012}.
+Those findings demonstrated that the sequence of the \gls{tmh} holds valuable information regarding biological roles, and forms the basis of our interest in the link between the polarity of a helix and functional activity beyond structural anchoring.
 
-TMSOC's z-score is able to distinguish between functionally active~\gls{tmh}s and those only associated with anchorage~\cite{Wong2011, Wong2012}.
+TMSOC's z-score is able to distinguish between functionally active~\gls{tmh}s and those only associated with anchoring~\cite{Wong2011, Wong2012}.
 This was determined with annotation of \gls{tmh}s from the UniProt database (303 membrane anchors and 1741 functional TM helices) from UniProt \cite{TheUniProtConsortium2014} and tested with 181132 \gls{tmh} sequences.
 Two peaks can be observed when stratifying the hydrophobicity and the sequence complexity of the \gls{tmh}s (Figure \ref{fig:complexity}).
 These peaks correspond with the ``simple'' and ``complex'' \gls{tmh} annotation.
@@ -320,7 +385,7 @@ By altering the window lengths, and the thresholds SEG can be optimised to searc
 \section{Biogenesis of transmembrane proteins}
 %Depth of secretion pathway (talk about translocons in depth here) & outline post-translational insertion
 \subsection{An overview of translocation}
-There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
+%There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
 In this thesis we focus on co\--translation via the Sec pathway, and on post\--translational pathway of \gls{ta} proteins in eukaryotic systems (Figure \ref{fig:post-versus-co-translation}).
 
 \begin{figure}[ht]
@@ -337,25 +402,47 @@ In this thesis we focus on co\--translation via the Sec pathway, and on post\--t
 \label{fig:post-versus-co-translation}
 \end{figure}
 
-The Sec pathway is conserved across all life~\cite{Cao2003} and is facillitated by the SecYEG (prokaryotic) and Sec61 (eukaryotic) translocons.
+The Sec pathway is conserved across all life~\cite{Cao2003} and is facillitated by the heterotrimeric SecYEG (prokaryotic) and Sec61 (eukaryotic) translocons.
 SecYEG targets proteins to the \gls{pm} (inner membrane) of bacteria.
 In bacteria nearly all \gls{tmp}s are inserted by either the Sec pathway via  SecYEG machinery, or by the structurally unrelated the 5\--fold more abundant YidC machinery \cite{Drew2003, Dalby2014}, and proteins can often use either pathway.
 Sec61 targets proteins to the \gls{er} of eukaryotic cells.
 Broadly speaking, these proteins translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Rapoport2012, Shao2011, Cymer2015}.
+In bacteria, the SecY protein is partly encircled by SecE (Sec61$\gamma$ in eukaryotes) which enhances it's stability in the membrane \cite{Kihara1995}.
+SecG is made up of two \gls{tmh}s and a cytosolic loop.
+It has been associated with SecA dependent translocation of secretory proteins \cite{Duong1997, Koch2000}.
+SecA is an ATPase and a membrane channel that can clamp translocating substrates above the SecY pore \cite{Zimmer2008}.
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=1\textwidth]{Intro/Translocon}
+	 \captionof{figure}[The pore, the plug, and the lateral gate of the translocon.]{\textbf{The pore, the plug, and the lateral gate of the translocon.}
+	 A) The idle state of the translocon.
+	 The pore constriction ring is shown by a dashed transparent cylinder.
+	 The plug is in red and the translocon (SecY or Sec61) is in gray.
+	 B) The translocating state of the translocon coloured similarly to A, but the plug has moved to allow translocion thought the channel, the constriction ring has widened, and the lateral gate opens to allow hydrophobic \gls{tmh}s into the membrane environment.
+	 C) A sphere representation of the translocon-ribosome complex structure during translocation.
+	 Highlighted are the Sec61 translocon (orange) the ribosome made up of the large 60s subunit and the small 40S subunit and the peptidyl transferase center (denoted by PTC), the site of translation (PDB 3J7R \cite{Voorhees2014}).
+	 Part C adapted from Voorhees \textit{et al.,} 2014 \cite{Voorhees2014}.
+
+	 }
+\label{fig:Translocon}
+\end{figure}
+
 Whilst ultimately the translocon machinery is built of multiple subunits, the \gls{tm} translocating protein itself is a 10 \gls{tmh} protein with an hourglass shaped interior pore~\cite{Berg2004} (SecY in prokaryotes or Sec61$\alpha$ in eukaryotes).
-When translocation is not occuring and the protein is idle, the hydrophobic core is constricted~\cite{Junne2010} and a lumenal plug is in place over the pore resulting in a seal across the \gls{tmp} pore~\cite{Tam2005, Junne2006}.
-During translocation the plug exits the pore, the constriction ring is opened, and a lateral gate opens between TMH2 and TMH3, and TMH7 and TMH8 to integrate \gls{tmh}s to the membrane~\cite{Berg2004}.
-Mutation experiments on these three features (the plug, contriction ring, and lateral gate) destabalised the closed state of the translocon and resulted in a protein localisation phenotype that suppressed inactivating mutations in signal sequences~\cite{Emr1981, Veenendaal2004, Li2007, Junne2007} and even caused transient channel openings in bacteria~\cite{Saparov2007}.
+When translocation is not occuring and the protein is idle, the hydrophobic core is constricted~\cite{Junne2010} and a lumenal plug is in place over the pore resulting in a seal across the \gls{tmp} pore~\cite{Tam2005, Junne2006} that protects the membrane from ion flow \cite{Park2011} (Figure \ref{fig:Translocon}).
 \gls{sp}s in stalled nascent chains crosslinked to the lipid and to the translocon machinery \cite{Martoglio1995}, showing that there may be a holding space which exposes the \gls{tmh} to the membrane  interfacial environment before insertion is complete and this was verified by more recent \gls{em} structural study \cite{Gogala2014, Park2012}.
 
-In bacteria, the SecY protein is partly encircled by SecE which enhances it's stability in the membrane \cite{Kihara1995}
- Sec$\beta$ and Sec$\gamma$
+During translocation the plug exits the pore, the constriction ring is opened, and a lateral gate opens between TMH2 and TMH3, and TMH7 and TMH8 to integrate \gls{tmh}s to the membrane~\cite{Berg2004, Petriman2018, Hizlan2012, Bischoff2014, Gogala2014, Egea2010} (Figure \ref{fig:Translocon}).
+Mutation experiments on these three features (the plug, contriction ring, and lateral gate) destabalised the closed state of the translocon and resulted in a protein localisation phenotype that suppressed inactivating mutations in signal sequences~\cite{Emr1981, Veenendaal2004, Li2007, Junne2007} and even caused transient channel openings in bacteria~\cite{Saparov2007}.
 
-\subsection{Co-translational Translocation}
+The \gls{emc} can act as a post\--translational \gls{ta} protein insertase \cite{Guna2018}.
+Furthermore, recently it was shown that the \gls{emc} was also able to act cooperatively with the Sec translocon during cotranslational insertion on a subsert of multipass \gls{tmp}s in both yeast and human cells \cite{Shurtleff2018}.
+Proximity specific ribosome profiling in yeast confirmed that the \gls{emc} engages the translocating multipass \gls{tmp}s, especially those containing charged residues in the \gls{tmh}.
+This would explain why it also interacts with \gls{ta} proteins \gls{tmh}s \cite{Guna2018, Shurtleff2018}.
+Pulldown experiments revealed that the \gls{emc} stabilised the synthesised \gls{tmp}s and recuited chaperones (both substrate specific and general) that allowed unstable \gls{tmp}s to achieve viable conformations allowing function in the \gls{er} and transport to the Golgi.
+In the absence of the \gls{emc}, UPS (a proteasome) degrades the membrane proteins.
 
-
-\subsection{Post-Translational Translocation}
-%Remember to point out differences in pro and eukaryotes.
+This dual function of the \gls{emc} is analogous with YidC \cite{Shurtleff2018} in bacteria which has the role of an insertase \cite{Samuelson2000, Drew2003, Dalby2014} as well as interacting with SecYEG to stabilise translocated \gls{tmp}s \cite{Nagamori2004}.
 
 \subsection{Signal peptides}
 \gls{sp}s are short peptide sequences present at the N-terminus of most secretory pathway destined proteins in both prokaryotes and eukaryotes.
