added revolution section

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -53,22 +53,36 @@ In the case of \gls{sp}s or \gls{tms}s the physical constraints are similar for 
 Worryingly, because of this oversight, it appears that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tms}s are indeed false positive results~\cite{Wong2010}.
 
 \subsection{The membrane protein revolution}
-Over the last decade, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
-Firstly, improvements in expression and purification occured thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshagi2005} at the colony level \cite{Cornvik2005}.
+Over the last decade or so, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
+Firstly, improvements in expression and purification occured thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshagi2005} at the colony level \cite{Cornvik2005} greatly increased the throughput of \gls{tmp}s.
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=1\textwidth]{Intro/revolution}
+		\captionof{figure}[The structure of SecYE in a nanodisc at near atomic resolution.]{\textbf{The structure of SecYE in a nanodisc at near atomic resolution.}.
+		A single particle cryo\--\gls{em} derived structure of SecYE in complex with the ribosome (not shown) with the \gls{tmh}s held in a reconstituted nanodisc (PDB code 4v6m \cite{Frauenfeld2011}).
+		The resolution is 7.1 \angstrom.
+		The protein structre is depicted by a rainbow coloured cartoon in the centre of the assembly.
+		The lipids are modelled as spherical atoms coloured by atom (carbon and hydrogen are white, oxygen is red and nitrogen is blue).
+		The peptide scaffold is shown in pink.
+		}
+
+\label{fig:revolution}
+\end{figure}
 
 Since folding of the \gls{tmp} often depends on the lipid environment, and finding conditions that encourage protein stability was shown to improve crystallisation \cite{Carpenter2007, Rosenbusch2001}.
-The technology behind nanodiscs was originally published in 2002 \cite{Bayburt2002}, and was shown to be a viable method for obtaining native conditions for \gls{tmp}s a couple of years later for cytochrome P450 \cite{Duan2004}.
-
+The technology behind nanodiscs was originally published in 2002 \cite{Bayburt2002}.
+The structure of the nanodisc is formed from two scaffold peptide helices wrapped arround a group of self\--associating phospholipids (Figure \ref{fig:revolution}A).
+The method was originally shown to be a viable method for obtaining native condition \gls{tmp} crystals for cytochrome P450 \cite{Duan2004}.
 Nanodiscs have been routinely used to much more easily obtain crystal structures.
 Nanodiscs overcome some of the major challenges caused by the hydrophobic helices and a more faithful representation of the biological membranes than alternative model membranes like liposomes~\cite{Borch2009}.
 
-However, critical questions remain: How is the \gls{tmh} oriented in the membrane, how is the \gls{tmh} interacting with the membrane, how is the \gls{tmh} interacting with another \gls{tmh} in the membrane, does the \gls{tmh} have functions beyond anchoring and if so what are they?
+Still the challenge remained of getting crystals of sufficient quality for x\--ray diffraction.
+Although many \gls{tmp}s readily formed low resolution 2D crystals for cryo\gls{em}\cite{Vinothkumar2015, Raunser2009}, and genome sequencing resulted in a exponential increase in structures derived from x\--ray crystallography \cite{Vinothkumar2010}, the dependency on crystallising \gls{tmp}s has always resulted in a hinderance.
 
+In a full circle from \gls{em} study of the fluid mosaic model in the 1970s \cite{Singer1972}, once more \gls{em} techniques were applied to \gls{tmp}s as single molecules (Figure \ref{fig:revolution}A).
+This method escapes the need for \gls{tmp} crystals \cite{Vinothkumar2015} and the presence of the sub 3\angstrom structures \cite{Grant2015, Bartesaghi2015} utilising this method have exceeded the near atomistic resolutions that were called a revolution in \gls{tmp} biology not a year ealier \cite{Kühlbrandt2014}.
 
-%Figure for Nanodisc
-%Development of Nanodiscs
-%first crystals in the membrane
-%em
 
 \subsection{The role of bioinformatics in transmembrane biology}
 
