--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 \sloppy
-\gls{tm} biology is a huge and varied field that is ultimately the study of the interface between compartments of the cell; one of the fundamental pillars of life as we know it~\cite{Ladokhin2015}.
+\gls{tm} biology is a huge and varied field that is ultimately the study of the interface between compartments of the cell.
 \gls{tmp}s include some of the most critical to life proteins as well as a large number of drug targets.
 However, the experimental inaccessibility of the \gls{tmh} has hampered the progress of study compared to their globular structural analogues.
 Despite progress over the last decade, the understanding of the relationship between the sequence and function of a \gls{tmh} is incomplete.
@@ -11,26 +11,50 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 \subsection{A brief history of the discovery of the membrane}
 
-%\subsection{Earliest Evidences of Compartmentalization}
-%To get started https://en.wikipedia.org/wiki/History_of_cell_membrane_theory
-%A group linking computational biophysics http://www.ks.uiuc.edu/History/membrane/
-%Some waffle about Hooke, Schwan, and Virchow
-%\subsection{Early Models of the Bilayer}
+Due to the remarkable ability to segregate biochemical environments, the cellular barrier has been described as one of the fundamental pillars of life as we know it~\cite{Ladokhin2015}.
+The significance of the cellular barrier was first noted in 1665 with the dawn of the microscope when Robert Hooke described the cell wall of the cork plant (Figure \ref{fig:history}A), with the clear distinction of the barrier giving rise to the term ``cell'' \cite{Donaldson2010, hooke1961micrographia}.
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=1\textwidth]{Intro/history}
+		\captionof{figure}[]{\textbf{}.
+		A) (Above/``Fig 1'') A diagram of the cork plant as viewed through an optical microscope drawn by Hooke circa 1665.
+		Note the distinction observable by what we now know to be the plant cells.
+		(Below/``Fig 2'') The cork plant used in the microscopy.
+		From Hooke, 1961 \cite{hooke1961micrographia}.
+		B) The first near atomic resolution (7\angstrom resolution map) structure of a \gls{tmp} acquired by \gls{em}.
+		This is a model of the 7\gls{tm} bacteriorhodopsin single protein from the purple membrane viewed roughly parallel to the plane of the membrane.
+		From Henderson, 1975 \cite{Henderson1975}.
+		C) The electron density map of the first crystal structure of a \gls{tmp} \cite{Deisenhofer1984}.
+		As in B, this structure is from phototrophic purple bacteria.
+		From Deisenhofer \textit{et al.,} 1984.
+		D) The first drawing in which the fluid mosaic model was presented in the bilayer.
+		From Singer, 1972 \cite{Singer1972}
+		}
+
+\label{fig:history}
+\end{figure}
+
+Throughout the early 20th century several theories were explored regarding the composition of the membrane.
+
 %Gorter & Grendel
 %Danielli and Davson http://biology.stackexchange.com/questions/20264/why-was-the-davson-danielli-model-rejected/24051#24051
 
-\subsection{The importance of transmembrane proteins}
+
+
+%To get started https://en.wikipedia.org/wiki/History_of_cell_membrane_theory
+%A group linking computational biophysics http://www.ks.uiuc.edu/History/membrane/
+%Some waffle about Hooke, Schwan, and Virchow
+
+
+
+\subsection{Transmembrane proteins in disease}
 Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
-Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}, and 40\% of drug targets \cite{Overington2006}.
+Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}, and make up 40\% of drug targets \cite{Overington2006}.
 These proteins allow biochemical pathways that traverse the various biological membranes used in life.
 Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells \cite{Shurtleff2018}, and mutations tend to cluster in \gls{tmh} regions of the genes \cite{Sanders2004}.
-This can result in a range of diseases including but not limited to cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\--Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidis caused by mutations the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Neimann\--Pick disease that contains over 200 disease causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
 Glycine to arginine mutations occur statistically more frequently in \gls{tmh}s than their globular $\alpha$\--helix counterparts \cite{Partridge2002}.
-%citation for drug targets
-
-%Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
-
-%Expand this section
+This can result in a range of diseases including but not limited to cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\--Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidis caused by mutations the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Neimann\--Pick disease that contains over 200 disease causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
 
 \subsection{The transmembrane protein problem}
 % Needs references and a figure showing rate of globular proteins and membrane proteins.
