--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -274,7 +274,7 @@ TMSOC \cite{Wong2011, Wong2012} is an algorithm that takes into account the Whit
 The resulting z\--score has been shown to be able to scrutinise between \gls{tmh}s that serve as anchors and those that have a function beyond \gls{tmp} anchoring.
 The lower the z\--score (low sequence information entropy and high hydrophobicity), the more likelihood of the \gls{tmh} being solely a membrane anchor.
 When considering the functional/anchoring potential of these \gls{gpcr} \gls{tmh}s  using TMSOC, we see trends among the structures with an average of 1.96 for TMH1, 2.30 for TMH2, 2.43 for TMH3, 2.34 for TMH4, 2.05 for TMH5, 2.24 for TMH 6 and 2.83 for TMH7 (Figure \ref{fig:GPCR-structures}D).
-TMH3 and TMH7 are therefor the most likely to contain function beyond anchorage, whilst the low z\--scores of TMH1 and TMH5 indicate they are more optimal anchors \cite{Baker2017}.
+TMH3 and TMH7 are therefore the most likely to contain function beyond anchorage, whilst the low z\--scores of TMH1 and TMH5 indicate they are more optimal anchors \cite{Baker2017}.
 
 When we consider much larger sequence datasets containing 1016 \gls{tmh}s at each \gls{tmh} number from non-redundant \gls{gpcr}s obtained from UniProt, the trend remains the same: that TMH3 (mean z\--score of 2.52) and TMH7 (mean z\--score of 2.55) have the highest z\--score, whilst TMH1 (mean z\--score of 2.09) and TMH5 (mean z\--score of 2.20) have the lowest (Figure \ref{fig:GPCR-structures}E).
 To investigate the statistical differences between the z\--score of the \gls{tmh}s, we applied the Kruskal Wallis and 2-sample Kolmogorov Smirnov tests from each \gls{tmh} number to each other \gls{tmh} number.
