--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -9,10 +9,12 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 \section{Membrane proteins}
 
-\subsection{A brief history of the discovery of the membrane}
+\subsection{A brief history of the discovery and exploration of the membrane proteins}
 
 Due to the remarkable ability to segregate biochemical environments, the cellular barrier has been described as one of the fundamental pillars of life as we know it~\cite{Ladokhin2015}.
 The significance of the cellular barrier was first noted in 1665 with the dawn of the microscope when Robert Hooke described the cell wall of the cork plant (Figure \ref{fig:history}A), with the clear distinction of the barrier giving rise to the term ``cell'' \cite{Donaldson2010, hooke1961micrographia}.
+
+%Some waffle about Hooke, Schwan, and Virchow
 
 \begin{figure}[ht!]
 \centering
@@ -22,37 +24,42 @@ The significance of the cellular barrier was first noted in 1665 with the dawn o
 		Note the distinction observable by what we now know to be the plant cells.
 		(Below/``Fig 2'') The cork plant used in the microscopy.
 		From Hooke, 1961 \cite{hooke1961micrographia}.
-		B) The first near atomic resolution (7\angstrom resolution map) structure of a \gls{tmp} acquired by \gls{em}.
+		B) The first near atomic resolution (7\angstrom~resolution map) structure of a \gls{tmp} acquired by \gls{em}.
 		This is a model of the 7\gls{tm} bacteriorhodopsin single protein from the purple membrane viewed roughly parallel to the plane of the membrane.
-		From Henderson, 1975 \cite{Henderson1975}.
+		From Henderson \& Unwin, 1975 \cite{Henderson1975}.
 		C) The electron density map of the first crystal structure of a \gls{tmp} \cite{Deisenhofer1984}.
+		The image shows 11 layers with contours representing 1.2\angstrom~between layers at 3\angstrom resolution.
 		As in B, this structure is from phototrophic purple bacteria.
+		The chromophores are made up of cytochrome (can be seen at the top of the image) and the H\--subunit (which can be seen at the bottom).
 		From Deisenhofer \textit{et al.,} 1984.
 		D) The first drawing in which the fluid mosaic model was presented in the bilayer.
-		From Singer, 1972 \cite{Singer1972}
+		From Singer \& Nocolson, 1972 \cite{Singer1972}
 		}
 
 \label{fig:history}
 \end{figure}
 
 Throughout the early 20th century several theories were explored regarding the composition of the membrane.
+In 1925, by scrutinising the concentration of chromocytes in the blood, and the surface area of the cells from blood from a variety of mammals Gorter and Grendel concluded that: ``chromocytes are covered by a layer of fatty substances that is two molecules thick'' \cite{Gorter1925}.
+This established the awareness of the lipid bilyaer.
+Later, the popular Danielli and Davson model correctly identified a phospholipid bilayer, however also incorrectly suggested a lipoid space existed within the phospholipid bilayer \cite{Danielli1935}.
+Eventually, as these ideas were explored, the fluid mosaic model was established in 1972 (Figure \ref{fig:history}D)\cite{Singer1972}; the membrane has a fluid behaviour, due to the gel\--like nature of it's composition, which allows proteins to move throughout the membrane bilayer.
 
-%Gorter & Grendel
-%Danielli and Davson http://biology.stackexchange.com/questions/20264/why-was-the-davson-danielli-model-rejected/24051#24051
-
-
-
-%To get started https://en.wikipedia.org/wiki/History_of_cell_membrane_theory
-%A group linking computational biophysics http://www.ks.uiuc.edu/History/membrane/
-%Some waffle about Hooke, Schwan, and Virchow
-
-
+In order to fully understand the relation ship between \gls{tmp}s and the membrane, molecular details would be needed.
+By the 1970s, reasonably detailed structures of membrane spanning segments of \gls{tmp}s were available by \gls{em} \cite{Henderson1975} (Figure \ref{fig:history}B).
+However the real goal was to have atomic resolution.
+The advent of x\--ray crystallography through the first half of the 20th century showed that it was possible to solve atomically resolved structures of small organic molecules \cite{Lonsdale1928, Dickinson1923} and larger proteins such as a steroid \cite{Carlisle1945}, penicillin \cite{Hodgekin1949}, and vitamnin B12 \cite{HODGKIN1955}.
+Dorothy Hodgekin was awarded the nobel prize for chemistry in 1964 for the ellucidation of these complex structures \cite{NobelMedia2018a}.
+7 years after the creation of the \gls{pdb} \cite{Bernstein1978}, the first \gls{tmp} was successfuly solved by x\--ray crystallography in 1984 \cite{Deisenhofer1984} (Figure \ref{fig:history}C), for which Johann Deisenhofer, Robert Huber, and Hartmut Michel won the Nobel prize in chemistry in 1988 for solving with atomistic resolution the 3D structure of a photosynthetic reaction centre \cite{NobelMedia2018}.
+In the following decades, x\--ray crystallography of \gls{tmp}s, despite the challenges therein, remained the predominant method of understanding the structure and function of \gls{tmp}s \cite{Carpenter2008}.
+Currently, we are in a revolution of \gls{tmp} structural acquisition, which will be discussed further in section \ref{section:revolution}.
 
 \subsection{Transmembrane proteins in disease}
 Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
-Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}, and make up 40\% of drug targets \cite{Overington2006}.
-These proteins allow biochemical pathways that traverse the various biological membranes used in life.
-Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells \cite{Shurtleff2018}, and mutations tend to cluster in \gls{tmh} regions of the genes \cite{Sanders2004}.
+Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome~\cite{Hopkins2002, Almen2009, Wang2013}, and make up 40\% of drug targets \cite{Overington2006} which reflects their biological and physiological importance.
+\gls{tmp}s allow biochemical pathways that traverse the various biological membranes used in life, either by transporting molecules or transducing signals across the bilayer.
+Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells and the mechanisms of folding are actively studied even recently revealing new systems of translocation \cite{Shurtleff2018}.
+Mutations tend to cluster in the \gls{tmh} regions of the genes \cite{Sanders2004}, which can cause the misfolding.
 Glycine to arginine mutations occur statistically more frequently in \gls{tmh}s than their globular $\alpha$\--helix counterparts \cite{Partridge2002}.
 This can result in a range of diseases including but not limited to cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\--Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidis caused by mutations the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Neimann\--Pick disease that contains over 200 disease causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
 
@@ -72,11 +79,11 @@ As well as being a biophysically convoluted system, \gls{tmh}s are biologically 
 
 When predicting the function of any protein, one follows the dicta that function is facilitated by form, and form is determined by the sequence; the more similar the sequences, the more likely that the function is similar.
 For globular soluble proteins having the same folds induces strict biochemical restrictions on the packing of a hydrophobic protein core which requires similarity of non-polar residue patterns.
-Sequence analysis of non-globular \gls{tmp}s has not been studied to nearly the same extent yet homology paradigms are silently extended and applied to them.
+Sequence analysis of non-globular \gls{tmp}s has not been studied to nearly the same extent yet homology paradigms are silently extended and applied to them \cite{Wong2010}.
 In the case of \gls{sp}s or \gls{tms}s the physical constraints are similar for all \gls{tmp}s, and so matching is indeed merely a reflection of the physical environment of the bilayer, not the common ancestry.
 Worryingly, because of this oversight, it appears that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tms}s are indeed false positive results~\cite{Wong2010}.
 
-\subsection{The membrane protein revolution}
+\subsection{The transmembrane protein revolution}\label{section:revolution}
 Over the last decade or so, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
 Firstly, improvements in expression and purification occured thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshagi2005} at the colony level \cite{Cornvik2005} greatly increased the throughput of \gls{tmp}s.
 
@@ -299,7 +306,7 @@ More recently it was found that although in simulations the energetic cost of ar
 That same study also found that in \gls{md} simulations, snorkelling, bilayer deformation, and peptide tilting combined to to be sufficient to lower the thermodynamic stability penalty of arginine insertion so that hydrophobic \gls{tmh}s with a central arginine residue will readily insert into the membrane.
 
 
-\subsection{The hydrophobicity of transmembrane segments}\label{ssection:hydrophobicityscales}
+\subsection{The hydrophobicity of transmembrane segments}\label{section:hydrophobicityscales}
 
 Perhaps the most prevalent and important feature of the transmembrane regions is the membrane spanning region which is composed mostly of non-polar residues.
 The importance of hydrophobicity on the effectiveness of membrane anchoring has been known for some time~\cite{Davis1985}.
