removed a ghost figure legend

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -254,8 +254,8 @@ Secondly is that it is emerging that different membranes have different thicknes
 \end{figure}
 
 % Figure: A cartoon depicting various problematic, yet biologically observed topologies and lengths that the alpha helices can adopt.
-From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bi-layer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
-These exceptional formations present a challenge for topology predictions of the loop regions.
+%From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bi-layer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
+%These exceptional formations present a challenge for topology predictions of the loop regions.
 
 The language used to describe \gls{tmh}s varies somewhat across the literature, primarily due to a changing understanding of \gls{tmh} general structure and relevance to function over the last 15 years or so.
 There is a general composition of a \gls{tmh} despite specific protein and membrane constraints~\cite{Sharpe2010}.
